--- a/day 08/homework/homework.html
+++ b/day 08/homework/homework.html
@@ -1,1 +1,44 @@
-#They haven't given us homework yet
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+ <!-- ბრ ით -->
+    <h1>ისწავლე <br>როგორც გიგა ცჰადი</h1>
+    <h2>ისწავლე გოაში გახდი <br>გოაელი</h2>
+    <h3>არ დახარჯო დრო<br> თამაშების თამაშით ისწავლე და გახდი წარმატებული</h3>
+    <h4>გოა არის ის აკადემია <br>სადაც კარგ განათლებას მიღებ თამაშთამაშით შემოგვიერთდი!</h4>
+    <h5>გოა არის საუკეთესო აკადემია<br> კოდირებისთვის აქ შენი ბავშვი მიიღებს საუკეთსო განათლებას</h5>
+    <h6>გინდა გახდე მინი დეველოპერი მინი ლიდერი <br>და ასშ ისწავლე გოაში და მიახწიე წარმატებას</h6>
+    <p>GOA IS THE BEST, გოა არის<br> საუკეთესო</p>
+    <button>შეუერთდი გოას</button>
+
+    <!-- ბრ გარეშე  -->
+ 
+    <h1>ისწავლე როგორც გიგა ცჰადი</h1>
+    <h2>ისწავლე გოაში გახდი გოაელი</h2>
+    <h3>არ დახარჯო დრო თამაშების თამაშით ისწავლე და გახდი წარმატებული</h3>
+    <h4>გოა არის ის აკადემია სადაც კარგ განათლებას მიღებ თამაშთამაშით შემოგვიერთდი!</h4>
+    <h5>გოა არის საუკეთესო აკადემია კოდირებისთვის აქ შენი ბავშვი მიიღებს საუკეთსო განათლებას</h5>
+    <h6>გინდა გახდე მინი დეველოპერი მინი ლიდერი და ასშ ისწავლე გოაში და მიახწიე წარმატებას</h6>
+    <p>GOA IS THE BEST, გოა არის საუკეთესო
+    <button>შეუერთდი გოას</button>
+
+
+   <!-- lorem -- არის ქომანდი რომელიც სხვადასხვა ტექსტებს დაწერს მაგალითი ქვემოთ არის  -->
+
+   <p> ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit nam deserunt omnis <br> dolores magni quam aperiam iure praesentium porro, vitae eveniet soluta. Amet perspiciatis pariatur, incidunt sequi sapiente nesciunt qui.</p>
+   <p> ipsum dolor sit amet, consectetur adipisicing elit. Ipsum<br> laudantium eveniet deserunt consequatur asperiores quam ullam. Magnam excepturi, enim placeat vitae veniam facilis eos atque reiciendis quae iure distinctio laudantium?</p>
+   <p> ipsum dolor sit amet consectetur adipisicing elit. Earum possimus veritatis,<br> eveniet autem, reprehenderit atque velit eaque ut dolores quis sunt magnam quidem laborum rerum. Consequuntur distinctio soluta quaerat delectus!</p>
+   <p> ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit soluta necessitatibus sapiente molestias facere dolore iure labore itaque error rerum esse cumque nesciunt, quo quam quibusdam consectetur delectus asperiores eveniet.</p>
+   <p> ipsum dolor, sit amet consectetur adipisicing elit. Vitae odio provident eos aliquid <br> ullam debitis nemo architecto, adipisci, reiciendis, mollitia magnam reprehenderit recusandae? Deleniti odit inventore dolore earum libero optio.</p>
+
+
+    <!-- <br> ჩვენ ბრ ვიყენებთ როცა ტექსტი დიდი არის და გვინდა ნახევარზე ჩავჭრათ რას  აკეთბს <ბრ> როდესაც ასეთი დიდი კოდი გვაქვს მაშინ ჩვენ ზოგჯერ ვწერთ ბრ რადგან დავაპატარაოთ  საცდელი --   <h3>არ დახარჯო დრო თამაშების თამაშით<br> ისწავლე და გახდი წარმატებული</h3> -->
+
+</body> 
+</html>
